Change active button and url when scroll is manual

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,17 @@ body {
   margin: 0;
 }
 
+h1 {
+  font-style: italic;
+  font-family: "Roboto_bold", Arial, Helvetica, Geneva, sans-serif;
+  font-size: 45px;
+}
+
+h2 {
+  font-family: "Roboto_bold", Arial, Helvetica, Geneva, sans-serif;
+  font-size: 35px;
+}
+
 .header {
   height: 100px;
   margin: 0;
